--- a/qgroundcontrol.qrc
+++ b/qgroundcontrol.qrc
@@ -261,6 +261,7 @@
         <file alias="QmlTest.qml">src/QmlControls/QmlTest.qml</file>
         <file alias="RadioComponent.qml">src/AutoPilotPlugins/Common/RadioComponent.qml</file>
         <file alias="SerialSettings.qml">src/ui/preferences/SerialSettings.qml</file>
+        <file alias="AraceFirstRunPromptLinks.qml">src/ui/preferences/AraceFirstRunPromptLinks.qml</file>
         <file alias="SetupParameterEditor.qml">src/VehicleSetup/SetupParameterEditor.qml</file>
         <file alias="SetupView.qml">src/VehicleSetup/SetupView.qml</file>
         <file alias="SimpleItemEditor.qml">src/PlanView/SimpleItemEditor.qml</file>
@@ -279,6 +280,8 @@
     <qresource prefix="/FirstRunPromptDialogs">
         <file alias="UnitsFirstRunPrompt.qml">src/FirstRunPromptDialogs/UnitsFirstRunPrompt.qml</file>
         <file alias="OfflineVehicleFirstRunPrompt.qml">src/FirstRunPromptDialogs/OfflineVehicleFirstRunPrompt.qml</file>
+        <file alias="AraceFirstRunPrompt.qml">src/FirstRunPromptDialogs/AraceFirstRunPrompt.qml</file>
+        <file alias="AraceFirstRunPromptVideo.qml">src/FirstRunPromptDialogs/AraceFirstRunPromptVideo.qml</file>
     </qresource>
     <qresource prefix="/json">
         <file alias="ADSBVehicleManager.SettingsGroup.json">src/Settings/ADSBVehicleManager.SettingsGroup.json</file>
